@@ -2,6 +2,8 @@
 v3.0.1-git
 ----------
 
+[jan] Fix reversed logic of displaying sub-task tree icons depending on the
+      text direction (Bug #10033).
 [jan] Fix encoding of non-ascii characters in parent task drop-down.
 [mjr] Fix editing tasklists (Bug #9965).
 
